# dynad

./: CMakeLists.txt  Makefile  README  base.prm  bcr2000Driver.cpp  bcr2000Driver.h  breathy.prm  breathy2.prm  buffer.cpp  buffer.h  cello.prm  controller.h  dark_bass.prm  default.map  default.prm  enopad.prm  envelope.h  fem-soft-hoo.prm  funOrgan.prm  fuzzybass.prm  generateTone.cpp  generateTone.h  johnsynth  main.cpp  mental.prm  multiPartial.h  ofApp.cpp  ofApp.h  oldGenerateTone.h  oohwobbly.prm  organicbass.prm  oscillator.h  oscpad.prm  rulebrittania.prm  sine.prm  softbrassy.prm  synthesiser.cpp  synthesiser.h  testattack.prm  trumpet.prm  (+6 more)
