cmake_minimum_required (VERSION 2.6)
project (johnsynth)
include_directories("~/include/")
include_directories("~/Software/stk/include")
include_directories(".")
set(CMAKE_CXX_FLAGS "-O3 -Wall -std=c++11")
#set(CMAKE_CXX_FLAGS " -O3 -pg -Wall -std=c++11")
#set(CMAKE_CXX_FLAGS "-g -Wall -std=c++11")
link_directories("/usr/lib")
link_libraries("/home/john/Software/stk/src/libstk.a")
link_libraries("pthread")
link_libraries("asound")
link_libraries("m")
link_libraries("jack")
link_libraries("boost_system")
link_libraries("boost_thread")
add_executable(johnsynth main.cpp buffer.cpp controller.cpp bcr2000Driver.cpp synthesiser.cpp)
